--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,3 +1,13 @@
+#menu_top {
+	padding-left: 20%;
+	padding-right: 20%;
+}
+
+#footer {
+	padding-left: 20%;
+	padding-right: 20%;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 body{
@@ -6,7 +16,7 @@ body{
 	background:#f4f4f4;
 }
 html,h1,h2,h3,h4,h5,h6,a{
-	font-family: "Raleway";
+	/*font-family: "Raleway"; MODIFIED PV*/
 }
 .navbar{
 	background:#F97300;
@@ -31,10 +41,14 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 
 /*header style*/
+#image_home {
+	margin-right: 10px;
+	width:30px;
+}
+
 .header{
 	position: relative;
 	background-image: url('../img/covid.png');
-
 	background-size: cover;
 	background-position: center;
 }
@@ -48,10 +62,9 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .description{
     position: absolute;
-    top: 30%;
+    top: 20%;
     margin: auto;
     padding: 2em;
-
 }
 .description h1{
 	color:#F97300 ;
@@ -78,8 +91,8 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .about img{
 	height: 100%;
-    width: 100%;
-    border-radius: 50%
+  width: 100%;
+  border-radius: 50%
 }
 .about span{
 	display: block;
@@ -113,9 +126,6 @@ html,h1,h2,h3,h4,h5,h6,a{
 	 height: 15rem;
 	 width: 100%;
 	 margin: 1em;
-
-
-
 }
 
 /*blog style*/
@@ -147,10 +157,11 @@ html,h1,h2,h3,h4,h5,h6,a{
 .blog .card-body{
 	padding: 1em;
 }
+
+/* TEAM */
 .team{
 	margin: 4em 0;
 	position: relative;
-
 }
 .team h1{
 	color:#F97300;
@@ -169,13 +180,11 @@ html,h1,h2,h3,h4,h5,h6,a{
 	position: absolute;
 	width: 71%;
 	bottom: 24px;
-
-
 }
 .team .item:hover .des{
 	height: 100%;
 	background:#f973007d;
-    position: absolute;
+  position: absolute;
 	width: 72%;
 	padding: 5em;
 	top: 0;
@@ -201,4 +210,8 @@ html,h1,h2,h3,h4,h5,h6,a{
 .contact-form .right .form-control::placeholder{
 	color: #888;
 	font-size: 16px;
+}
+
+footer {
+	color: white;
 }
