--- a/app/templates/album_view.html
+++ b/app/templates/album_view.html
@@ -61,40 +61,12 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Covid Biblio Album</h1>
-        <p class="lead text-muted">Hi guys, this is a work in progress so don't be harsh on us...</p>
-        <p><a href="#" class="btn btn-primary my-2">Upload new article (names WITHOUT spaces)</a></p>
+        <h1 class="fw-light">{{ article_name }}</h1>
+        <br>
+        <p>{{ article_text }}</p>
       </div>
     </div>
   </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for s in nb_of_articles %}
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Article {{ s+1 }}</text>
-            </svg>
-            <div class="card-body">
-              <p class="card-text">{{ list_of_articles[s]}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href={{ '/album_view/' + list_of_articles[s] }}><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-
-      </div>
-    </div>
-
 </main>
 
 <!-- FOOTER -->
