--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,3 +1,7 @@
+.main_block {
+	margin-top: 20px;
+}
+
 #menu_top {
 	padding-left: 20%;
 	padding-right: 20%;
@@ -6,6 +10,7 @@
 #footer {
 	padding-left: 20%;
 	padding-right: 20%;
+	margin-top: 10px;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Raleway');
