--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -1,61 +1,17 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Covid Biblio Album</title>
+<!-- signin.html-->
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
+{% extends "base.html" %}
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/album.css">
+{% block title %}
+Covid Biblio Album
+{% endblock %}
 
-    <script src="https://getbootstrap.com//docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer></script>
+{% block head %}
+<meta name="description" content="">
+<link rel="stylesheet" type="text/css" href="../static/css/album.css">
+{% endblock %}
 
-    <!-- Favicons -->
-  <link rel="icon" href="../static/img/favicons/favicon.ico">
-  <meta name="theme-color" content="#7952b3">
-</head>
-
-<body>
-<header>
-  <div class="collapse bg-dark" id="navbarHeader">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About Covid Biblio</h4>
-          <p class="text-muted">We are an online platform that extracts relevant information when users upload a scientific journal article.</p>
-        </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="navbar shadow-sm">
-    <div class="container">
-      <a href="/" class="navbar-brand d-flex align-items-center">
-        <img id="image_home" src="../static/img/transparent_covid.png"/>
-        <strong>Home</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
-</header>
-
-
+{% block body %}
 <main>
 
   <section class="py-5 text-center container">
@@ -63,7 +19,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Covid Biblio Album</h1>
         <p class="lead text-muted">Hi guys, this is a work in progress so don't be harsh on us...</p>
-        <p><a href="#" class="btn btn-primary my-2">Upload new article (names WITHOUT spaces)</a></p>
+        <p><a href="upload" class="btn btn-primary my-2">Upload new article (names WITHOUT spaces)</a></p>
       </div>
     </div>
   </section>
@@ -82,7 +38,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href={{ '/album_view/' + list_of_articles[s] }}><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                  <a href={{ '/album_delete/' + list_of_articles[s] }}><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -96,21 +52,4 @@
     </div>
 
 </main>
-
-<!-- FOOTER -->
-<footer>
-<nav class="navbar navbar-expand-lg" id="footer">
-	<p class="navbar">&copy; Covid Biblio 2021</p>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse " id="navbarSupportedContent">
-		<ul class="navbar-nav mr-4">
-			<li class="nav-item"><a class="nav-link" data-value="about" href="#">Covid Biblio Album</a></li>
-		</ul>
-	</div>
-</nav>
-</footer>
-
-</body>
-</html>
+{% endblock %}
