NLP Biblio with authentification

--- a/app/templates/album_delete.html
+++ b/app/templates/album_delete.html
@@ -22,7 +22,7 @@ Delete article
   </section>
 
   <section class="py-5 text-center container">
-    <p><a href="{{url_for('album')}}" class="btn btn-primary my-2">Back to Article View</a></p>
+    <p><a href="{{url_for('main.album')}}" class="btn btn-primary my-2">Back to Article View</a></p>
   </section>
 
 </main>
