--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -8,7 +8,7 @@ Upload
 
 {% block head %}
 <meta name="description" content="">
-<link rel="stylesheet" type="text/css" href="../static/css/signin.css">
+<link rel="stylesheet" type="text/css" href="../static/css/login.css">
 {% endblock %}
 
 {% block body %}
