--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -3,16 +3,12 @@ body {
     background-color: #f5f5f5;
 }
 
+.remember {
+  margin-left: 5px;
+}
+
 
 .signin_body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
