--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -19,7 +19,11 @@ Covid Biblio Album
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Covid Biblio Album</h1>
         <p class="lead text-muted">Hi guys, this is a work in progress so don't be harsh on us...</p>
+        {% if current_user.is_authenticated %}
         <p><a href="upload" class="btn btn-primary my-2">Upload new article (names WITHOUT spaces)</a></p>
+        {% else %}
+        <p><a href="upload" class="btn btn-primary my-2 disabled">Upload new article (names WITHOUT spaces)</a></p>
+        {% endif %}
       </div>
     </div>
   </section>
@@ -38,7 +42,9 @@ Covid Biblio Album
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href={{ '/album_view/' + list_of_articles[s] }}><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                  {% if current_user.is_authenticated %}
                   <a href={{ '/album_delete/' + list_of_articles[s] }}><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
+                  {% endif %}
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
