--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
 
     <!-- Title -->
-    {% block title %}{% endblock %}
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS, Site main CSS, Favicon -->
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
@@ -22,16 +22,27 @@
   <body>
 
     <!-- HEADER -->
-    <header>
-      <div class="navbar shadow-sm fixed-top">
-        <div class="container">
-          <a href="/" class="navbar-brand d-flex align-items-center">
-            <img id="image_home" src="../static/img/transparent_covid.png"/>
-            <strong>Home</strong>
-          </a>
-        </div>
+    <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
+    <nav class="navbar navbar-expand-lg fixed-top" id="menu_top"">
+      <img id="image_home" src="../static/img/transparent_covid.png"/>
+      <a class="navbar-brand" href="{{ url_for('main.index') }}">Covid Biblio NLP</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="{{ url_for('main.index') }}">Home<span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('main.album') }}">Articles</a></li>
+          {% if current_user.is_authenticated %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
+          {% else %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a></li>
+          {% endif %}
+        </ul>
       </div>
-    </header>
+    </nav>
 
     <div class="main_block">
     {% block body %}
